# python-youtube-section-generator

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  app.py  mkdocs.yml  pyproject.toml  sections.json
.github/: copilot-commit-instructions.md  copilot-instructions.md  dependabot.yml  event.json  git-commit-instructions.md
.github/instructions/: copilot-markdown.instructions.md  copilot-python.instructions.md  copilot-tests.instructions.md
.github/prompts/: README.md  flask-route.prompt.md  refactor.prompt.md  service-module.prompt.md  type-hints.prompt.md
.github/workflows/: build.yml  ci.yml  docs.yml  test.yml
docs/: ADAPTER_MIGRATION.md  CONTRIBUTING.md  ISSUE_RESOLUTION_REFINEMENT.md  LLM_CONFIGURATION.md  OPTIMIZATION_SUMMARY.md  QUALITY_IMPROVEMENTS.md  README.md  REFINEMENT_IMPLEMENTATION_SUMMARY.md  REFINEMENT_PERFORMANCE.md  REFINEMENT_QUICK_REF.md  REFINEMENT_STATUS_CHECK.md  TRANSCRIPT_REFINEMENT.md  TROUBLESHOOTING.md  advanced.md  architecture.md  changelog.md  contributing.md  copilot.md  cpu_migration.md  development.md  documentation-index.md  index.md  optimization-summary.md  pipeline.md  pre-commit-tooling.md  project_readme.md  prospects.md  references.bib  setup.md  status_index.md
docs/api/: core_services.md
docs/changelog/: index.md  unreleased.md
docs/changelog/releases/: 2025-11-09-v1.0.0.md
docs/imported/: scripts_cleanup.md  scripts_readme.md  tests_readme.md
docs/legacy/: copilot.md  documentation-index.md  llm-configuration.md  optimization-summary.md  quality-improvements.md  setup.md  transcript-refinement.md
docs/legacy/api/: core_services.md  web_app.md
docs/legacy/development/: scripts.md  testing.md
docs/legacy/prospects/: backlog.md  ci-tests.md  heavy-tests.md  index.md  processing-architecture.md  roadmap.md  setup-interactive.md  setup.md  todos.md
docs/prospects/: backlog.md  heavy-tests.md  index.md  processing-architecture.md  todos.md
docs_imported_backup/: CLEANUP.md
scripts/: CLEANUP.md  README.md  __init__.py  capture_llm_output.py  check_download.sh  check_environment.py  check_local_model_paths.py  check_splitter_import.py  decontaminate_cpu.sh  detect_gpu.py  post_install.py  quick_test_phi3.py  release_changelog.py  run_gen_and_log.py  run_pytest_programmatic.py  setup_cpu_rag.sh  test_download_endpoint.py  test_generate_post.py  test_generate_response.json  test_llm_cpu.py  test_phi3.py  test_rag_quick.py  test_refinement.py  test_web_integration.py  test_webapp_client.py  validate_phi3_setup.py  verify_migration.py
scripts/cli/: setup_interactive.py
scripts/dev/: post_install.py  run_gen_and_log.py
scripts/obsolete/: README.md  capture_llm_output.py  debug_llm_output.py  inspect_config.py  run_pytest_programmatic.py  test_generate_response.json  verify_migration.py  verify_refactoring.py  webapp_response.json
scripts/tools/: check_download.sh  check_stray_docs.py  download_model.sh  setup_cpu_rag.sh  todos_to_issues.py
scripts/verify/: detect_gpu.py  validate_phi3_setup.py  verify_local_llm.py
src/: __init__.py  main.py  transcript.json  web_app.py
src/core/: __init__.py  formatting.py  local_llm_client.py
src/core/adapters/: __init__.py  deepl_client.py  gemini_client.py  local_llm_client.py
src/core/config/: __init__.py  config.py
src/core/embeddings/: __init__.py  cache.py  factory.py  provider.py
src/core/llm/: __init__.py  base.py  factory.py  gemini_provider.py  local_provider.py
src/core/models/: __init__.py  models.py
src/core/retrieval/: __init__.py  rag.py  segmentation.py
src/core/services/: __init__.py  pipeline.py  pipeline_stages.py  repository.py  section_generation.py  transcript_refinement.py  translation.py
src/core/transcript/: __init__.py  extractor.py
src/core/utils/: stopwords.py
src/resources/stopwords/: de.txt  en.txt
src/templates/: index.html
src/utils/: file_io.py  json_utils.py  logging_config.py
static/: style.css
tests/: README.md  conftest.py  local_llm_shim.py  test_adapters_shims.py  test_local_llm.py  test_local_llm_shim.py  test_pipeline_stages.py  test_segmentation.py  test_transcript_refinement.py  test_translation_cache_ttl.py
tests/_support/: local_llm_shim.py
tests/scripts/: downloaded_a24109bf2b5e_sections.txt  quick_test_phi3.py  test_download_endpoint.py  test_generate_post.py  test_improved_titles.py  test_llm_cpu.py  test_phi3.py  test_rag_quick.py  test_refinement.py  test_web_integration.py  test_webapp_client.py
