[tool.poetry]
name = "pythonyoutubetranscript"
version = "0.1.0"
description = "AI-powered YouTube transcript section generator with timestamp creation using Google Gemini"
readme = "README.md"
license = "MIT"
authors = ["foerster_work <foerster.work@gmail.com>"]
keywords = ["youtube", "transcript", "ai", "gemini", "sections", "timestamps"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
youtube-transcript-api = "^1.1.1"
google-genai = "^1.25.0"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
langdetect = "^1.0.9"
httpx = "^0.28.0"
psutil = "^6.1.0"
deepl = "^1.12.0"
llama-cpp-python = "^0.3.2"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-requests = "^2.32.0"
pre-commit = "^4.0.0"
tox = "^4.23.0"
filelock = "^3.12.0"

# NOTE: For CPU-only setup, install these via pip AFTER poetry install:
# poetry run pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
# poetry run pip install sentence-transformers chromadb

[tool.poetry.scripts]
pythonyoutubetranscript = "src.main:main"
setup_interactive = "scripts.setup_interactive:main"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4"
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--verbose", "--cov=src", "--cov-report=term-missing", "--cov-report=html"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^24.10.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.11"
mkdocs-include-markdown-plugin = "^7.1.5"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-bibtex = "^4.2.5"
python-markdown-math = "^0.9"
ruff = "^0.8.0"
mypy = "^1.13.0"
